--- a/.github/workflows/actions_twrp.yml
+++ b/.github/workflows/actions_twrp.yml
@@ -1,6 +1,6 @@
 name: ACTIONS_BUILD_TWRP
 
-# Actions TWRP Builder for ginkgo
+# Actions TWRP Builder for V430A
 
 on:
   watch:
@@ -28,8 +28,8 @@ jobs:
       run: |
         sudo apt update && sudo apt upgrade -y
         sudo apt install libncurses5 -y
-        git config --global user.name "WhiteMouseHuang"
-        git config --global user.email "whitemouse2005@163.com"
+        git config --global user.name "Leminh8686"
+        git config --global user.email "19506021+Leminh8686@users.noreply.github.com"
         sudo apt-get install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip -y
 
     - name: Install Repo
@@ -48,11 +48,11 @@ jobs:
       run : |
         PATH=~/bin:$PATH
         echo "Setting up PATH"
-        git config --global user.name "WhiteMouseHuang"
-        git config --global user.email "whitemouse2005@163.com"
+        git config --global user.name "Leminh8686"
+        git config --global user.email "19506021+Leminh8686@users.noreply.github.com"
         repo init --depth=1 -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
         repo sync -c -j$(nproc --all) --force-sync
-        git clone --depth=1 https://github.com/WhiteMouseHuang/twrp_device_huawei_kiwi.git -b android-9.0 device/huawei/kiwi
+        git clone --depth=1 https://github.com/Leminh8686/joy3_twrp -b master device/vsmart/V430A
         # Fix busybox
         # Thanks at @Pinkdoge
         git clone https://github.com/TeamWin/android_external_busybox/ -b android-9.0 external/busybox
@@ -61,7 +61,7 @@ jobs:
       run : |
         . build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
-        lunch omni_kiwi-eng
+        lunch omni_V430A-eng
         mka recoveryimage -j$(nproc --all)
         mv $OUT/recovery.img ./recovery.img
 
