--- a/.github/workflows/actions_twrp.yml
+++ b/.github/workflows/actions_twrp.yml
@@ -52,7 +52,7 @@ jobs:
         git config --global user.email "19506021+Leminh8686@users.noreply.github.com"
         repo init --depth=1 -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-9.0
         repo sync -c -j$(nproc --all) --force-sync
-        git clone --depth=1 https://github.com/Leminh8686/joy3_twrp -b master device/vsmart/V430A
+        git clone --depth=1 https://github.com/Leminh8686/android_device_vsmart_V430A-TWRP -b 1 device/vsmart/V430A
         # Fix busybox
         # Thanks at @Pinkdoge
         git clone https://github.com/TeamWin/android_external_busybox/ -b android-9.0 external/busybox
